--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </main>
     <load src="partials/footer.html" />
 
-    <script src="./js/mobile-menu.js"></script>
+    <script src="js/mobile-menu.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
