--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz@0,9..40;1,9..40&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="./img/favicon/favicon.ico" />
     <meta name="description" content="Магазин Українських Вишиванок">
     <title>Vyshyvanka Vibes</title>
@@ -35,6 +36,7 @@
     </main>
     <load src="partials/footer.html" />
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
